tests/ui/issue-3145.stderr
error: expected token: `,`
  --> $DIR/issue-3145.rs:11:19
   |
LL |     println!("{}" a); //~ERROR expected token: `,`
   |                   ^

error: aborting due to previous error

